# Clerk-Simple-NextJS-FAST

./: .gitignore  README.md  clerk_auth.py  main.py  pyproject.toml
backend/: .antigravityignore  CORS_middleware.py  README.md  main.py  pyproject.toml  sql_app.db
backend/core/: database.py
backend/dependencies/: auth.py  credits.py
backend/models/: user.py
backend/tests/: test_backend_template.py
frontend/: README.md  package.json  pnpm-lock.yaml  proxy.ts
frontend/app/test1/: page.tsx
frontend/utils/: apiTester.ts
